Group API docs by Collection
